Synch before refreshing system