@@ -18,8 +18,17 @@ javac -Xlint:unchecked -d ${PWD}/mods/compiled --module-source-path ${PWD}/src/ 
 echo " > Create API module"
 jar --create --file ${PWD}/mods/jars/joostvdg.buming.api.jar --module-version 1.0 -C ${PWD}/mods/compiled/joostvdg.buming.api .
 
+echo " > Create Logging module"
+jar --create --file ${PWD}/mods/jars/joostvdg.buming.logging.jar --module-version 1.0 -C ${PWD}/mods/compiled/joostvdg.buming.logging .
+
 echo " > Create SimpleWeb module"
 jar --create --file ${PWD}/mods/jars/joostvdg.buming.simpleweb.jar --module-version 1.0 -C ${PWD}/mods/compiled/joostvdg.buming.simpleweb .
+
+echo " > Create Concurrency module"
+jar --create --file ${PWD}/mods/jars/joostvdg.buming.concurrency.jar --module-version 1.0 -C ${PWD}/mods/compiled/joostvdg.buming.concurrency .
+
+echo " > Create Sorting module"
+jar --create --file ${PWD}/mods/jars/joostvdg.buming.sorting.jar --module-version 1.0 -C ${PWD}/mods/compiled/joostvdg.buming.sorting .
 
 echo " > Create CLI module"
 jar --create --file ${PWD}/mods/jars/joostvdg.buming.cli.jar --module-version 1.0  -e com.github.joostvdg.buming.cli.HelloWorld -C ${PWD}/mods/compiled/joostvdg.buming.cli .
@@ -30,8 +39,11 @@ rm -rf buming-image
 echo "---------------------------------------------------------------------------------------------"
 jlink --module-path ${PWD}/mods/jars/:/${JAVA_HOME}/jmods \
     --add-modules joostvdg.buming.cli \
+    --add-modules joostvdg.buming.logging \
     --add-modules joostvdg.buming.api \
     --add-modules joostvdg.buming.simpleweb \
+    --add-modules joostvdg.buming.concurrency \
+    --add-modules joostvdg.buming.sorting \
     --launcher buming=joostvdg.buming.cli \
     --output buming-image
 echo "---------------------------------------------------------------------------------------------"
@@ -41,7 +53,7 @@ buming-image/bin/java --list-modules
 echo "==================="
 echo "==================="
 echo "== Running app without plugins"
-buming-image/bin/buming
+buming-image/bin/buming -server
 echo "==================="
 echo "==================="
 #echo "== Running app with project generator plugin"
